--- a/app/globals.css
+++ b/app/globals.css
@@ -105,6 +105,14 @@
   @apply bg-light-800! dark:bg-dark-300!;
 }
 
+@utility bg-auth-dark {
+  background-image: var(--background-image-auth-dark);
+}
+
+@utility bg-auth-light {
+  background-image: var(--background-image-auth-light);
+}
+
 @utility background-light800_dark200 {
   @apply bg-light-800 dark:bg-dark-200;
 }
